# Shortyfy

./: .gitignore  LICENSE  README.md  docker-compose.yaml  render.yaml
Backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
Backend/app/: main.py
Backend/app/db/: supabase.py
Backend/app/routes/: urls.py
Backend/app/tests/: test_main.py
Backend/tests/: test_main.py
Frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
Frontend/src/: App.tsx
Frontend/src/Pages/: Home.tsx  Result.tsx
Frontend/src/util/: tools.ts
backend/: Dockerfile
backend/app/: main.py
backend/app/db/: supabase.py
backend/app/utils/: shortener.py
frontend/: .env.example  .env.production  Dockerfile
frontend/src/: index.css
frontend/src/Pages/: Result.tsx
frontend/src/util/: tools.ts
